# DRF_project

./: .env_sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.githib/workflows/: ci.yml
.github/workflows/: ci.yml
config/: settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/management/commands/: add_data.py
materials/migrations/: 0001_initial.py  0002_alter_course_options_course_owner_lesson_owner_and_more.py
nginx/: nginx.conf
users/: admin.py  models.py  permissions.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_subscription.py  0004_alter_payment_options_alter_subscription_options_and_more.py  0005_alter_payment_date.py  0006_alter_payment_user.py
